--- a/Personal Insight/IntroPage_2.xaml
+++ b/Personal Insight/IntroPage_2.xaml
@@ -47,7 +47,13 @@
         </Grid>
 
         <WrapPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <ScrollViewer HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" CanContentScroll="False" Grid.Row="1" HorizontalScrollBarVisibility="Auto">
+            <WrapPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.75,0">
+                    <GradientStop Color="#FF203340" Offset="0"/>
+                    <GradientStop Color="{DynamicResource {x:Static SystemColors.DesktopColorKey}}" FrameworkElement.FlowDirection="LeftToRight" Offset="1"/>
+                </LinearGradientBrush>
+            </WrapPanel.Background>
+            <ScrollViewer HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" CanContentScroll="False" Grid.Row="1" HorizontalScrollBarVisibility="Auto" Padding="50">
                 <StackPanel x:Name="sp">
 
                     <!--STEP1-->
@@ -79,7 +85,7 @@
                         File type: '.zip' (Only Zip files are supported)<LineBreak/>
                         Archive size: 50GB<LineBreak/>
                     </TextBlock>
-                    <Image Source="customize_archive.png" Height="841.328" Width="682" />
+                    <Image Source="customize_archive.png" Height="565" Width="542" />
                     <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap"  VerticalAlignment="Top" Foreground="#DDC9C9C9" FontSize="20" TextAlignment="Center" FontFamily="Microsoft YaHei UI Light" Margin="25">
                     Finally, click 'Create Archive'<LineBreak/>
                     Now sit back, watch Netflix, or go outdoors as this proccess will take hours and sometimes a few days!
