--- a/Personal Insight/App.xaml
+++ b/Personal Insight/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Personal_Insight"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,4 +15,7 @@
             <Color x:Key="Color2">#FF203340</Color>
         </ResourceDictionary>
     </Application.Resources>
+    <Application.MainWindow>
+        <local:MainWindow/>
+    </Application.MainWindow>
 </Application>
