--- a/Personal Insight/Pages/IntroPage_3.xaml
+++ b/Personal Insight/Pages/IntroPage_3.xaml
@@ -56,8 +56,8 @@
                         <Image x:Name="itemImage" Margin="200,5,20,5" Source="{Binding ImageResource}" Width="32" Height="32"/>
                         <TextBlock Text="{Binding ProductName}" TextWrapping="Wrap" FontFamily="Microsoft YaHei UI Light" FontSize="16" Foreground="#DDE2E2E2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0" TextAlignment="Left" Width="400" Grid.Column="1" Height="Auto"/>
                         <TextBlock Text="{Binding ProductFolderPath}" TextWrapping="Wrap" FontFamily="Microsoft YaHei UI Light" FontSize="14" Foreground="#DDA4A4A4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0" TextAlignment="Left" Width="500" Grid.Column="2" Height="Auto"/>
-                        <Image Source="/Personal Insight;component/assets/icons/icons8-tick-box-48.png" Width="32" Height="32"/>
-                        <TextBlock Text="Imported Successfully!" TextWrapping="Wrap" FontFamily="Microsoft YaHei UI Light" FontSize="14" Foreground="#DDA4A4A4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,200,0" TextAlignment="Left" Width="Auto" Grid.Column="2" Height="Auto"/>
+                        <Image Source="{Binding VerifyModuleImage}" Width="32" Height="32"/>
+                        <TextBlock Text="{Binding VerifyModuleText}" TextWrapping="Wrap" FontFamily="Microsoft YaHei UI Light" FontSize="14" Foreground="#DDA4A4A4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,200,0" TextAlignment="Left" Width="Auto" Grid.Column="2" Height="Auto"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
