--- a/Personal Insight/Pages/Dashboard.xaml
+++ b/Personal Insight/Pages/Dashboard.xaml
@@ -26,15 +26,23 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="300"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
+        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Personal Insight - Dashboard" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
+
+        <Grid Grid.Row="1" Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Margin="50,0,0,0" TextWrapping="Wrap" Text="Overview" FontSize="30" TextAlignment="Center" HorizontalAlignment="Left" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
+        </Grid>
 
         <Grid Grid.Row="2">
             <ListView x:Name="listBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="25" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#00FAFAFA">
@@ -62,11 +70,5 @@
                 </ListView.ItemsPanel>
             </ListView>
         </Grid>
-
-        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Personal Insight - Dashboard" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
-        <Separator Grid.Row="1" Height="2" Background="#7FA0A0A0"/>
-
-
-
     </Grid>
 </Page>
