--- a/Personal Insight/Pages/IntroPage_3.xaml
+++ b/Personal Insight/Pages/IntroPage_3.xaml
@@ -12,7 +12,8 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        FontFamily="{DynamicResource MaterialDesignFont}"
+      Loaded="Window_ContentRendered">
     <Page.Background>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.75,0">
             <GradientStop Color="{DynamicResource Color2}" Offset="0"/>
@@ -44,7 +45,7 @@
             <TextBlock TextWrapping="Wrap" FontFamily="Microsoft YaHei UI Light" FontSize="20" Foreground="#DDE2E2E2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0" TextAlignment="Center">
             Choose the path to the <Italic>'.../Takeout'</Italic> folder
             </TextBlock>
-            <Button Content="Select folder" Height="Auto" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="50,15" Click="btnClick_openFile" Grid.Column="1"/>
+            <Button x:Name="open_folder_btn" Content="Select folder" Height="Auto" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="50,15" Click="btnClick_openFile" Grid.Column="1"/>
         </Grid>
 
         <ListView x:Name="listView" Margin="0,25,0,0" Background="#FF646464" Padding="50" Grid.Row="2" HorizontalAlignment="Center" SelectionMode="Single" IsTextSearchEnabled="False">
@@ -72,7 +73,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button Content="BACK" Height="50" Margin="0" Background="#FF2D7874" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" FontFamily="Segoe UI" Click="P3BtnClick_back" Padding="0" Width="200"/>
-            <Button x:Name="btn_next" Content="NEXT" Height="50" Margin="0" Width="200" Background="#FF2D7874" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" FontFamily="Segoe UI" Click="P3BtnClick_next" Grid.Column="1" Padding="0"/>
+            <Button x:Name="next_btn" Content="NEXT" Height="50" Margin="0" Width="200" Background="#FF2D7874" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" FontFamily="Segoe UI" Click="P3BtnClick_next" Grid.Column="1" Padding="0"/>
         </Grid>
     </Grid>
 </Page>
