--- a/Personal Insight/Pages/ModelPages/Page Chrome.xaml
+++ b/Personal Insight/Pages/ModelPages/Page Chrome.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Personal_Insight.Pages.Dashboard"
+﻿<Page x:Class="Personal_Insight.Pages.ModelPages.Page_Chrome"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,7 +34,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Personal Insight - Dashboard" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
+        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Chrome" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
 
         <ScrollViewer Grid.Row="1" Grid.RowSpan="3" CanContentScroll="True">
             <Grid>
@@ -85,62 +85,99 @@
                         <TextBlock Margin="0,25" TextWrapping="Wrap" FontSize="50" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Grid.Row="1" Text="0"/>
                         <TextBlock Margin="0" TextWrapping="Wrap" FontSize="20" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDB9B9B9" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Text="Satyam > you suggest me lol"/>
                     </StackPanel>
-
-
                 </Grid>
 
                 <Separator Height="2" Grid.Row="2" Background="#3FA0A0A0"/>
 
-                <TextBlock Margin="0,25,0,0" TextWrapping="Wrap" Text="Choose a module for more information" FontSize="25" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDB9B9B9" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Grid.Row="3"/>
 
-                <Grid Grid.Row="4">
-                    <ListView x:Name="listBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="25,5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#00FAFAFA" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Disabled" PreviewMouseLeftButtonUp="listView_Click">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
+                <DataGrid EnableColumnVirtualization="True"  VirtualizingPanel.VirtualizationMode="Recycling" EnableRowVirtualization="True"   x:Name="dataGrid" AlternatingRowBackground="#33000000" CanUserAddRows="False" AutoGenerateColumns="False" Grid.Row="3" Background="#00000000" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20" FontSize="20" BorderBrush="#00000000" Foreground="#00000000">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="HorizontalAlignment" Value="Stretch" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="Background" Value="Transparent" />
+                            <Setter Property="Foreground" Value="White" />
+                            <Setter Property="FontWeight"  Value="Bold" />
+                            <Setter Property="Margin" Value="25" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+                    <DataGrid.CellStyle>
+                        <Style TargetType="DataGridCell">
+                            <Setter Property="Padding" Value="25"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                                        <Border Padding="{TemplateBinding Padding}" BorderBrush="Transparent" BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent" SnapsToDevicePixels="True">
+                                            <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Focusable="False" IsManipulationEnabled="False"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver"  Value="True">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                                <Trigger Property="IsMouseOver"  Value="False">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGrid.CellStyle>
+                    <DataGrid.RowStyle>
+                        <Style TargetType="DataGridRow">
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                                <Trigger Property="IsMouseOver"  Value="False">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGrid.RowStyle>
+                    <DataGrid.Columns>
 
-                                <Grid x:Name="LayoutRoot">
+                        <DataGridTemplateColumn Header="Title" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=Title}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#DDB9B9B9" TextWrapping="Wrap"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
 
-                                    <Grid x:Name="Overlay" Panel.ZIndex="1000">
-                                        
-                                        <Grid.Background>
-                                            <SolidColorBrush Color="{Binding BackgroundColor}"/>
-                                        </Grid.Background>
+                        <DataGridTemplateColumn Header="URL" Width="*" CanUserSort="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=URI_text}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#DDB9B9B9" TextWrapping="Wrap"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
 
-                                        <!-- Add controls as needed -->
-                                    </Grid>
+                        <DataGridTemplateColumn Header="Date" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=description}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#DDB9B9B9" TextWrapping="Wrap"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
 
-                                    <!-- Use whatever layout you need -->
-                                    <ContentControl x:Name="MainContent" />
 
-                                    <Border BorderThickness="1" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                        <Border.Background>
-                                            <SolidColorBrush Color="{DynamicResource Color2}"/>
-                                        </Border.Background>
+                        <DataGridTemplateColumn Header="Visit Link" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#DDB9B9B9">
+                                        <Hyperlink Click="onClickHyperLink">
+                                            Web Site
+                                        </Hyperlink>
+                                    </TextBlock>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
 
-                                        <Grid Width="300" Height="100" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="*"/>
-                                            </Grid.RowDefinitions>
+                    </DataGrid.Columns>
+                </DataGrid>
 
-                                            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" ScrollViewer.CanContentScroll="True" CanVerticallyScroll="True" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                                <Image Source="{Binding ImageResource}" Width="32" Height="32" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <Label Content="{Binding ProductName}" Foreground="White" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="Auto"/>
-                                                <Label Content="This module is still being worked on" Visibility="{Binding Path=IsModuleDisabled, Converter={StaticResource BoolToVis}}" Foreground="#FFAC7B7B" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="Auto" FontSize="10" FontWeight="Bold"/>
-                                            </StackPanel>
 
-                                        </Grid>
-                                    </Border>
-
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel IsItemsHost="True" Orientation="Horizontal"  />
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
-                    </ListView>
-                </Grid>
             </Grid>
         </ScrollViewer>
 
