--- a/Personal Insight/Pages/ModelPages/Page Contacts.xaml
+++ b/Personal Insight/Pages/ModelPages/Page Contacts.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Personal_Insight.Pages.Dashboard"
+﻿<Page x:Class="Personal_Insight.Pages.ModelPages.Page_Contacts"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,7 +34,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Personal Insight - Dashboard" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
+        <TextBlock Margin="0,50" TextWrapping="Wrap" Text="Contacts" FontSize="48" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Top"/>
 
         <ScrollViewer Grid.Row="1" Grid.RowSpan="3" CanContentScroll="True">
             <Grid>
@@ -85,62 +85,9 @@
                         <TextBlock Margin="0,25" TextWrapping="Wrap" FontSize="50" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDFFFFFF" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Grid.Row="1" Text="0"/>
                         <TextBlock Margin="0" TextWrapping="Wrap" FontSize="20" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDB9B9B9" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Text="Satyam > you suggest me lol"/>
                     </StackPanel>
-
-
                 </Grid>
 
                 <Separator Height="2" Grid.Row="2" Background="#3FA0A0A0"/>
-
-                <TextBlock Margin="0,25,0,0" TextWrapping="Wrap" Text="Choose a module for more information" FontSize="25" TextAlignment="Center" HorizontalAlignment="Center" Foreground="#DDB9B9B9" FontFamily="Microsoft YaHei UI Light" VerticalAlignment="Center" Grid.Row="3"/>
-
-                <Grid Grid.Row="4">
-                    <ListView x:Name="listBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="25,5" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#00FAFAFA" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Disabled" PreviewMouseLeftButtonUp="listView_Click">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-
-                                <Grid x:Name="LayoutRoot">
-
-                                    <Grid x:Name="Overlay" Panel.ZIndex="1000">
-                                        
-                                        <Grid.Background>
-                                            <SolidColorBrush Color="{Binding BackgroundColor}"/>
-                                        </Grid.Background>
-
-                                        <!-- Add controls as needed -->
-                                    </Grid>
-
-                                    <!-- Use whatever layout you need -->
-                                    <ContentControl x:Name="MainContent" />
-
-                                    <Border BorderThickness="1" ScrollViewer.CanContentScroll="True" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                        <Border.Background>
-                                            <SolidColorBrush Color="{DynamicResource Color2}"/>
-                                        </Border.Background>
-
-                                        <Grid Width="300" Height="100" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="*"/>
-                                            </Grid.RowDefinitions>
-
-                                            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" ScrollViewer.CanContentScroll="True" CanVerticallyScroll="True" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                                <Image Source="{Binding ImageResource}" Width="32" Height="32" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                <Label Content="{Binding ProductName}" Foreground="White" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="Auto"/>
-                                                <Label Content="This module is still being worked on" Visibility="{Binding Path=IsModuleDisabled, Converter={StaticResource BoolToVis}}" Foreground="#FFAC7B7B" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="Auto" FontSize="10" FontWeight="Bold"/>
-                                            </StackPanel>
-
-                                        </Grid>
-                                    </Border>
-
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel IsItemsHost="True" Orientation="Horizontal"  />
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
-                    </ListView>
-                </Grid>
             </Grid>
         </ScrollViewer>
 
